[package]
name = "encore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.10.5"
compiler_builtins = { version = "0.1.39", features = ["mangled-names"] }
rlibc = "1.0.0"
bitflags = "1.2.1"
displaydoc = { version = "0.2.4", default-features = false }
