[package]
name = "minipack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encore = { version = "0.1.0", path = "../encore" }
lz4_flex = { version = "0.7.5", default-features = false, features = ["safe-encode", "safe-decode"] }
pixie = { path = "../pixie" }
displaydoc = { version = "0.2.4", default-features = false }