[package]
name = "pixie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = { version = "0.16.0", default-features = false, features = ["alloc"] }
encore = { path = "../encore" }
displaydoc = { version = "0.2.4", default-features = false }
derivative = { version = "2.2.0", features = ["use_core"] }